--- a/index.html
+++ b/index.html
@@ -43,24 +43,32 @@
     <p>I enjoy spending time with my family, travelling, scuba diving, playing video games, fishing, and the outdoors when the weather allows. </p>
   </div>
 </div>
-<!-- second section ends here -->
+<!-- Second section ends here -->
 <!-- Third section starts here -->
- <div class="pageThree text-center container-fluid" id="portfolio">
-    <h2 class="block text-center">Portfolio</h2>
+<div class="pageThree text-center container-fluid" id="portfolio">
+  <h2 class="block text-center">Portfolio</h2>
     <p>......................</p>
       <p class="checkout">Check out some things I've worked on.</p>
-   <!-- First row -->
-  <div class="row col-md-4"><br>
-    <a href= https://codepen.io/allieclark90/full/vjGvqO>
-    <img src= "https://i.imgur.com/SyRU4P9.png" alt= "Tribute Page">
-    </a>
-   </div>
-   <div class="row col-md-6"><br>
-    <a href= https://trinket.io/library/trinkets/daf125dfab>
-      <img src= "https://i.imgur.com/3NweLPD.png" alt = "A circle made from squares.">
-    </a>
+      <br></br>
+  <!-- First row -->
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-md-4">
+        <a href= "https://codepen.io/allieclark90/full/vjGvqO">
+        <img src= "https://i.imgur.com/SyRU4P9.png" alt= "Tribute Page">
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href= "https://trinket.io/library/trinkets/daf125dfab">
+        <img src= "https://i.imgur.com/3NweLPD.png" alt = "A circle made from squares.">
+      </div>
+      <div class= "col-md-4">
+        <a href= "https://github.com/AllieClark90/RockPaperScissors"> 
+        <img src = "https://i.imgur.com/IUPmMKs.png" alt = "Rock, Paper, Scissors">
+      </div>
     </div>
-   </div>
+  </div>
+</div>
 <!--Third section ends here-->
 <!-- fourth section starts here -->
  <div class="pageFour container-fluid text-center" id="contact">
